--- a/css/tailwind.prod.css
+++ b/css/tailwind.prod.css
@@ -443,6 +443,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+.aspect-ratio-box {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    padding-top: 100%;
+    position: relative;
+  }
+
+.aspect-ratio-box img {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    max-height: 100%;
+
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
 .section {
   width: 100%;
   padding-right: 1rem;
@@ -651,10 +669,6 @@ a.text-link:hover {
 
 .grid {
   display: grid;
-}
-
-.aspect-square {
-  aspect-ratio: 1 / 1;
 }
 
 .w-2\/3 {
